--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -8,23 +8,16 @@ import { Icon } from "astro-icon";
 <main
   class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
   <div class="py-6 md:order-1 hidden md:block">
-    <Picture
-      src={heroImage}
-      alt="Astronaut in the air"
-      widths={[200, 400, 600]}
-      sizes="(max-width: 800px) 100vw, 620px"
-      loading="eager"
-      format="avif"
-    />
+   <img width="500" height="500" src="/replicate-prediction-xbp3eibbikizmq7ydcxzjdfhb4-2.webp">
+    
   </div>
   <div>
     <h1
       class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Marketing website done with Astro
+      Same Day Appliance Repair
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Astroship is a starter template for startups, marketing websites & landing
-      pages.<wbr /> Built with Astro.build and TailwindCSS. You can quickly
+      Welcome to the Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We pride ourselves on being a trusted business, serving our valued customers since 2007. We deliver professional appliance repair services, that you can rely on with confidence.<br><br>Over the years, we have helped thousands of customers, alleviating the stress that comes when appliances malfunction. Our quick response time and efficient work ethic form the cornerstone of our operational approach, aiming to resolve your appliance issues promptly and proficiently.
       create any website with this starter.
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
@@ -36,7 +29,7 @@ import { Icon } from "astro-icon";
         rel="noopener">
         <Icon class="text-white w-5 h-5" name="bx:bxs-cloud-download" />
 
-         Download for Free
+         Call Us
       </Link>
       <Link
         size="lg"
@@ -46,7 +39,7 @@ import { Icon } from "astro-icon";
         class="flex gap-1 items-center justify-center"
         target="_blank">
         <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
-         GitHub Repo
+         BOOK Us
       </Link>
     </div>
   </div>
