--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -6,7 +6,7 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 const menuitems = [
   {
-    title: "Features",
+    title: "Services",
     path: "#",
     children: [
       { title: "Action", path: "/" },
@@ -16,7 +16,7 @@ const menuitems = [
     ],
   },
   {
-    title: "Pricing",
+    title: "Areas",
     path: "/pricing",
   },
   {
