--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -17,9 +17,7 @@ import { Icon } from "astro-icon";
       Same Day Appliance Repair
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Welcome to the Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We pride ourselves on being a trusted business, serving our valued customers since 2007. We deliver professional appliance repair services, that you can rely on with confidence.<br><br>Over the years, we have helped thousands of customers, alleviating the stress that comes when appliances malfunction. Our quick response time and efficient work ethic form the cornerstone of our operational approach, aiming to resolve your appliance issues promptly and proficiently.
-      create any website with this starter.
-    </p>
+      Welcome to the Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We pride ourselves on being a trusted business, serving our valued customers since 2007. We deliver professional appliance repair services, that you can rely on with confidence.
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
         href="#"
