--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -7,7 +7,7 @@ const features = [
     title: "Same Day Service",
     description:
       "Build your site using React, Svelte, Vue, Preact, web components, or just plain ol' HTML + JavaScript.",
-    icon: "bx:bxs-calendar-event",
+    icon: "bx:bxs-bell",
   },
   {
     title: "3 Month Warraty",
