--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,43 @@ import Layout from "@layouts/Layout.astro";
   <Container>
     <Hero />
     <Features />
+    <!-- Unites -->
+    <span><a title="Same day refrigerator repair Los Angeles" style="padding:0 20px 0 20px;" href="contact/book-online.html" target="_blank">
+      <img width="120" height="150" src="/images/refrigerator-repair-los-angeles.webp" alt="Same day expert refrigerator repair - Los Angeles">
+      <span>Refrigerator Repair</span>
+      <span class="button">BOOK
+      </span>
+  </a></span>
+                      <span><a title="Same day freezer repair Los Angeles" style="padding:0 20px 0 20px;" href="contact/book-online.html" target="_blank">
+      <img width="120" height="150" src="images/freezer-stove-repair-los-angeles.webp" alt="Same day expert freezer repair - Los Angeles">
+      <span>Freezer Repair</span>
+      <span class="button">BOOK
+     </span>
+  </a></span>
+                      <a title="Same day washer repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+      <img width="120" height="150" src="images/washer-repair-los-angeles.webp" alt="Same day expert washer repair - Los Angeles">
+      <span>Washer Repair</span>
+      <span class="button">BOOK
+     </span>
+  </a>
+                      <a title="Same day dryer repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+      <img width="120" height="150" src="images/dryer-repair-los-angeles.webp" alt="Same day expert dryer repair - Los Angeles">
+      <span>Dryer Repair</span>
+      <span class="button">BOOK
+     </span>
+  </a>
+                      <a title="Same day range stove repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+      <img width="120" height="150" src="images/range-stove-repair-los-angeles.webp" alt="Same day expert range/stover repair - Los Angeles">
+      <span>Range/Stove Repair</span>
+      <span class="button">BOOK
+     </span>
+  </a>
+                      <a title="Same day dishwasher repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+      <img width="120" height="150" src="images/dishwasher-repair-los-angeles.webp" alt="Same day dishwasher repair - Los Angeles">
+      <span>Dishwasher Repair</span>
+      <span class="button">BOOK
+     </span>
+  </a>
     <Logos />
     <Cta />
   </Container>
