--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,12 @@ import Layout from "@layouts/Layout.astro";
     <Hero />
     <Features />
     <!-- Unites -->
+     <main>
+    <div class="category category-0" style="background-color:#ffffff;">
+      <div class="container">
+          <h2>Same Day Household Appliance Repair, Installation, and Maintenance</h2>
+          <p>Our same day appliance repair experts will fix your appliance on the first visit in 90% of cases. Our trained technicians have parts on hand to ensure a quick repair.</p>
+          <div class="category-items d-flex justify-content-between">
     <span><a title="Same day refrigerator repair Los Angeles" style="padding:0 20px 0 20px;" href="contact/book-online.html" target="_blank">
       <img width="120" height="150" src="/images/refrigerator-repair-los-angeles.webp" alt="Same day expert refrigerator repair - Los Angeles">
       <span>Refrigerator Repair</span>
@@ -47,7 +53,7 @@ import Layout from "@layouts/Layout.astro";
       <span>Dishwasher Repair</span>
       <span class="button">BOOK
      </span>
-  </a>
+  </a></div></div></main>
     <Logos />
     <Cta />
   </Container>
