--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -80,6 +80,45 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
     .contacts-page,.faq-page,.news-page,.news-page.news,.product-page{padding:85px 0 40px}.city-page,.product-page{padding:85px 0 40px}footer .menu .faq_footer,footer .menu .faq_news{display:none}.ab-content>div{width:100%;text-align:center}
             
             .about-images{justify-content:center}.about-images img,.about-images img:last-child{margin:0 5px 10px 5px}}@media screen and (max-width:900px){.category-items span{font-size:14px}.category-items{flex-wrap:wrap;justify-content:center}.pr-images img{max-width:85px}.steps .s-item{width:350px;margin:0 0 40px}.pr-images p{margin:0;font-size:14px}}@media screen and (max-width:870px){.statistics{flex-wrap:wrap;justify-content:start;margin:0}.statistics .s-item{margin:20px 20px 0 0}.statistics .s-item:last-child{margin:20px 0 0 0}footer a{font-size:14px}footer p{margin:10px 0 0}.cities{justify-content:flex-start}.cities .title-city{margin-right:20px}#banner h1{font-size:24px;line-height:35px}#banner p.dsc{font-size:15px}}@media screen and (max-width:800px){h1{font-size:34px;line-height:40px}.callback{width:370px}.content-cp{width:100%}}@media screen and (max-width:767px){.article-content{flex-direction:column;justify-content:center;align-items:center}.news .article{width:360px;margin:0 0 20px}footer .menu{display:none}.f-c-info{flex-wrap:wrap}.f-c-info #map{width:100%;margin:20px 0 0}.city-page .web-info,.news-page .web-info{width:100%}.city-page .container,.news-page .container,.product-page .container{flex-wrap:wrap;justify-content:center}.pp-info{margin-left:0;width:100%}.city-page .callback button,.product-page .callback button,.product-page .callback input{width:100%;margin:0 0 15px}.steps .container{justify-content:center}.steps svg{width:50px}.steps .s-item p{width:calc(100% - 60px)}}@media screen and (max-width:700px){.callback{margin:20px 0 10px}.web-info{width:100%;padding-right:0}#banner .container{flex-wrap:wrap;text-align:center;align-items:center;justify-content:center}.callback p{font-size:20px;line-height:25px}#banner{height:auto;padding-bottom:20px}.statistics{margin:25px 0 0}#banner h1{color:#fff;margin:15px 0 14px}.statistics{justify-content:center}.steps .s-item{width:280px}.pr-images img{max-width:70px}.brands-images img{margin:0 10px 15px;max-width:120px}}@media screen and (max-width:650px){.positive-reviews .brands p{font-size:14px;line-height:22px}.category p{font-size:18px;line-height:25px}}@media screen and (max-width:576px){.about{padding:15px 0 10px}.statistics .s-item p{font-size:18px}.statistics .s-item span{font-size:14px}.statistics .s-item{width:85px;height:85px}h1{font-size:30px;line-height:36px}.callback{margin-top:35px}.brands,.positive-reviews,.reviews{padding:40px 0 30px}.steps .s-item svg{width:36px}.steps .s-item{width:230px}.reviews .rc-item{width:90%}.reviews h4{margin:0 0 30px}.news,.service_area{padding:0 0 40px}.brands p br,.positive-reviews h3 br{display:none}.pr-images{flex-wrap:wrap}.pr-images img{margin:0 10px 10px}.pr-images:last-child{margin:0 0 15px}.pr-images p{margin:-15px 0 0 0}}@media screen and (max-width:450px){.statistics .s-item p{font-size:16px}.statistics .s-item{width:75px;height:75px;border-radius:2px}.statistics .s-item span{font-size:12px}.f-info{width:100%;margin:0 0 15px}footer .container{flex-wrap:wrap}.question{padding:10px 14px}.answer{padding:10px}.category-items a{width:180px}.category-items img{max-width:180px}.contacts-page table{width:350px}}@media screen and (max-width:425px){.mb-menu,.nav .book_get{margin-left:10px}.nav .book_get{padding:6px 7px;font-size:14px;margin-left:10px}.nav .phone{font-size:16px;line-height:20px}.info-menu{text-align:end}.pr-images img{margin:0 20px 20px}.steps .s-item{width:100%}.callback{padding:20px 32px 25px;width:100%}.reviews .rc-item{width:100%}.about .book_online{padding:0}.more-news{margin:10px auto 0}}@media screen and (max-width:390px){.callback{padding:20px 15px 25px}.statistics .s-item p{font-size:14px;margin:0}.statistics .s-item span{font-size:11px}.statistics .s-item{width:65px;height:60px}h1{font-size:28px;line-height:34px}#banner p.dsc{font-size:15px;line-height:20px}.news .article{width:100%}.btn-org{font-size:16px;padding:12px 15px}.category-items a{width:170px}.category-items img{max-width:170px}}
+   /*form button*/
+.formbutton {background-color:#c2250a!important; }
+/*buttons*/
+.button {
+  display: inline-block;
+  margin: 10px 0 15px 0;
+  padding: 15px 25px;
+  text-align: center;
+  font-size: 15px;
+  font-weight:900;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: #c2250a!important;
+  background: transparent;
+  cursor: pointer;
+  transition: ease-out 0.5s;
+  border: 2px solid #c2250a;
+  border-radius: 0;
+  box-shadow: inset 0 0 0 0 #725AC1;
+}
+
+.button:hover {
+  color: white;
+  box-shadow: inset 0 -100px 0 0 #c2250a;
+}
+
+.button:active {
+  transform: scale(0.9);
+}
+
+/*---*/
+.review-card{margin:10px;background-color: #f9f9f9;
+    border: 1px #333 solid;
+            border-color:#88898c;
+            border-radius:10px;}
+    .review-card{padding:20px;}
+    .review-card__author{color:#5d5e5e}
+ 
+    
     </style>
   </body>
 </html>
