--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -16,15 +16,25 @@ const menuitems = [
     ],
   },
   {
-    title: "Areas",
-    path: "/pricing",
+    title: "Service Areas",
+    path: "#",
+    children: [
+      { title: "Action", path: "/" },
+      { title: "Another action", path: "#" },
+      { title: "Dropdown Submenu", path: "#" },
+      { title: "404 Page", path: "/404" },
+    ],
   },
   {
     title: "About",
     path: "/about",
   },
   {
-    title: "Blog",
+    title: "Brands",
+    path: "/blog",
+  },
+  {
+    title: "Book Us Online",
     path: "/blog",
   },
   {
