--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -8,7 +8,7 @@ import { Icon } from "astro-icon";
 <main
   class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
   <div class="py-6 md:order-1 hidden md:block">
-   <img width="500" height="500" src="/images/replicate-prediction-xbp3eibbikizmq7ydcxzjdfhb4-2.webp">
+   <img width="400" height="400" style="border-radius: 25px;" src="/images/same-day-appliance-repair-experts.webp">
     
   </div>
   <div>
