--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -7,13 +7,7 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 const menuitems = [
   {
     title: "Services",
-    path: "#",
-    children: [
-      { title: "Action", path: "/" },
-      { title: "Another action", path: "#" },
-      { title: "Dropdown Submenu", path: "#" },
-      { title: "404 Page", path: "/404" },
-    ],
+    path: "/services/commercial-and-household",
   },
   {
     title: "Service Areas",
