--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -11,9 +11,9 @@ const menuitems = [
   },
   {
     title: "Service Areas",
-    path: "#",
+    path: "/areas/los-angeles-and-surrounding-areas",
     children: [
-      { title: "Action", path: "/" },
+      { title: "Los Feliz", path: "/areas/los-feliz" },
       { title: "Another action", path: "#" },
       { title: "Dropdown Submenu", path: "#" },
       { title: "404 Page", path: "/404" },
