--- a/src/pages/areas/los-angeles-and-surrounding-areas.astro
+++ b/src/pages/areas/los-angeles-and-surrounding-areas.astro
@@ -9,11 +9,9 @@ import Layout from "@layouts/Layout.astro";
  <Layout title="">
       <Container>
  <main>
-    <h4>Commercial & Household Appliance Repair</h4>
-    <div><div style="width:100%; margin-top:30px;"><a href='/contact/book-online' title='Optimize your health with tips and tricks newsletter'> <button class="newsbtn"> <span>BOOK Online</span></button></a> <a title="Call Appliance Repair services Los Angeles and surrounding areas" href="tel:3235405890"><button class="newsbtn"> <span> FREE Consultation</span></button></a><a title="Call Appliance Repair services Los Angeles and surrounding areas" href="tel:3235405890"><button class="newsbtn"> <span> CALL US</span></button></a></div></div>
-                <img class="responsiveimg" width="600" height="600" alt="Los Angeles Same Day Apliance Repair" src="../images/same-day-appliance-repair.webp"/>
-                <p></p>
-                <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;"><h1>Expert Appliance Repair Services in Los Angeles and Surrounding Areas</h1>
+    <h1>Commercial & Household Appliance Repair</h1>
+    <img style="border-radius: 25px;" class="responsiveimg" width="600" height="600" alt="Los Feliz Same Day Apliance Repair" src="../images/same-day-appliance-repair-experts.webp"/>
+    <div style="background-color:#ebf0f5; padding:25px; border-radius: 25px;"><h1>Expert Appliance Repair Services in Los Angeles and Surrounding Areas</h1>
                     <p>Welcome to Same Day Appliance Repair, your trusted partner for all your appliance repair needs in Los Angeles and its neighboring communities. We understand the importance of having well-functioning appliances in your home or business, and our mission is to ensure that you receive prompt, reliable, and efficient repair services whenever you need them.</p>
     
                     <h2>Our Comprehensive Services</h2>
