--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -14,8 +14,8 @@ const menuitems = [
     path: "/areas/los-angeles-and-surrounding-areas",
     children: [
       { title: "Los Feliz", path: "/areas/los-feliz" },
-      { title: "Another action", path: "#" },
-      { title: "Dropdown Submenu", path: "#" },
+      { title: "Marina Del Rey", path: "/areas/marina-del-rey" },
+      { title: "Santa Monica", path: "/areas/santa-monica" },
       { title: "404 Page", path: "/404" },
     ],
   },
