--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -24,7 +24,7 @@ const menuitems = [
     path: "/blog",
   },
   {
-    title: "Book Us Online",
+    title: "Book Us",
     path: "/blog",
   },
   {
@@ -79,15 +79,15 @@ const menuitems = [
           }
         </ul>
         <div class="lg:hidden flex items-center mt-3 gap-4">
-          <Link href="#" style="muted" block size="md">Log in</Link>
-          <Link href="#" size="md" block>Sign up</Link>
+          <Link href="tel:+13235405890" style="muted" block size="md">CALL US</Link>
+          <Link href="/book" size="md" block>BOOK US</Link>
         </div>
       </MenuItems>
     </Astronav>
     <div>
       <div class="hidden lg:flex items-center gap-4">
-        <a href="#">Log in</a>
-        <Link href="#" size="md">Sign up</Link>
+        <a href="tel:+13235405890">CALL US</a>
+        <Link href="/book" size="md">BOOK US</Link>
       </div>
     </div>
   </header>
