--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -24,10 +24,6 @@ const menuitems = [
     path: "/blog",
   },
   {
-    title: "Book Us",
-    path: "/blog",
-  },
-  {
     title: "Contact",
     path: "/contact",
   },
@@ -79,14 +75,14 @@ const menuitems = [
           }
         </ul>
         <div class="lg:hidden flex items-center mt-3 gap-4">
-          <Link href="tel:+13235405890" style="muted" block size="md">CALL US</Link>
+          <Link href="tel:+13235405890" style="muted" block size="md">CALL US: (323)540-5890</Link>
           <Link href="/book" size="md" block>BOOK US</Link>
         </div>
       </MenuItems>
     </Astronav>
     <div>
       <div class="hidden lg:flex items-center gap-4">
-        <a href="tel:+13235405890">CALL US</a>
+        <a href="tel:+13235405890">CALL US: (323)540-5890</a>
         <Link href="/book" size="md">BOOK US</Link>
       </div>
     </div>
