--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -4,20 +4,33 @@ import heroImage from "assets/hero.png";
 import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon";
 ---
+<h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
+  Same Day Appliance Repair
+</h1>
+<main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
+ 
+  
 
-<main
-  class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
-  <div class="py-6 md:order-1 hidden md:block">
-   <img width="400" height="400" style="border-radius: 25px;" src="/images/same-day-appliance-repair-experts.webp">
-    
+  <div class="py-6 md:order-1 md:block">
+   <div class="callback">
+    <form class='contact-form' id='simple-contact-form' method='POST' name='simpleContactForm'><input type='hidden' name='form-name' value='simpleContactForm' />
+<!-- <form name="contact" method="POST" data-netlify="true" onSubmit="submit">-->
+<label id="contact-form-name-label" for="contact-form-name" class="form-label">Name</label>
+<input type="text" name="name" id="contact-form-name" aria-labelledby="contact-form-name-label" class="form-input">
+<label id="contact-form-phone-label" for="contact-form-phone" class="form-label">Phone</label>
+<input type="tel" name="phone" id="contact-form-phone" aria-labelledby="contact-form-phone-label" class="form-input">
+<label id="contact-form-message-label" for="contact-form-message" class="form-label">Message</label>
+<textarea name="message" id="contact-form-message" aria-labelledby="contact-form-message-label" class="form-textarea" rows="2"></textarea>
+<button class="formbutton" type="submit" style="font-weight:900;">REQUEST A CALLBACK</button>
+</form>
+</div> 
   </div>
+
   <div>
-    <h1
-      class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Same Day Appliance Repair
-    </h1>
+    
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Welcome to the Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We pride ourselves on being a trusted business, serving our valued customers since 2007. We deliver professional appliance repair services, that you can rely on with confidence.
+      <img width="400" height="400" style="border-radius: 25px;" src="/images/same-day-appliance-repair-experts.webp">
+      <br> Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We deliver professional appliance repair services, that you can rely on with confidence.</p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
         href="#"
