--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -8,11 +8,9 @@ import { Icon } from "astro-icon";
   Same Day Appliance Repair
 </h1>
 <main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
- 
-  
-
   <div class="py-6 md:order-1 md:block">
-   <div class="callback">
+    <p>Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We deliver professional appliance repair services, that you can rely on with confidence.</p>
+   <br><div class="callback">
     <form class='contact-form' id='simple-contact-form' method='POST' name='simpleContactForm'><input type='hidden' name='form-name' value='simpleContactForm' />
 <!-- <form name="contact" method="POST" data-netlify="true" onSubmit="submit">-->
 <label id="contact-form-name-label" for="contact-form-name" class="form-label">Name</label>
@@ -26,11 +24,9 @@ import { Icon } from "astro-icon";
 </div> 
   </div>
 
-  <div>
-    
-    <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      <img width="400" height="400" style="border-radius: 25px;" src="/images/same-day-appliance-repair-experts.webp">
-      <br> Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We deliver professional appliance repair services, that you can rely on with confidence.</p>
+  <div class="text-lg mt-4 text-slate-600 max-w-xl">
+      <img width="350" height="350" style="border-radius: 25px;" src="/images/same-day-appliance-repair-experts.webp">
+     
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
         href="#"
