--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -45,7 +45,7 @@ import { Icon } from "astro-icon";
         href="https://github.com/surjithctly/astroship"
         class="flex gap-1 items-center justify-center"
         target="_blank">
-        <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
+        <Icon class="text-black w-4 h-4" name="bx:bxl-phone" />
          BOOK Us
       </Link>
     </div>
