--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,17 +20,23 @@ import Layout from "@layouts/Layout.astro";
               <p>Our same day appliance repair experts will fix your appliance on the first visit in 90% of cases. Our trained technicians have parts on hand to ensure a quick repair.</p>
               <div class="category-items d-flex justify-content-between">
                   
-                                          <span><a title="Same day refrigerator repair Los Angeles" style="padding:0 20px 0 20px;" href="contact/book-online.html" target="_blank">
+                                          <span>
                           <img width="120" height="150" src="/images/refrigerator-repair-los-angeles.webp" alt="Same day expert refrigerator repair - Los Angeles">
                           <span>Refrigerator Repair</span>
-                          <span class="button">BOOK
-                          </span>
-                      </a></span>
+                        <div class="lg:hidden flex items-center mt-3 gap-4">
+                            <link href="/book" size="md" block>BOOK US</link>
+                         
+                        </div>
                                           <span><a title="Same day freezer repair Los Angeles" style="padding:0 20px 0 20px;" href="contact/book-online.html" target="_blank">
                           <img width="120" height="150" src="images/freezer-stove-repair-los-angeles.webp" alt="Same day expert freezer repair - Los Angeles">
+                          
+                          
                           <span>Freezer Repair</span>
-                          <span class="button">BOOK
+                          <span class="lg:hidden flex items-center mt-3 gap-4">BOOK
                          </span>
+                        
+                      
+
                       </a></span>
                                           <a title="Same day washer repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
                           <img width="120" height="150" src="images/washer-repair-los-angeles.webp" alt="Same day expert washer repair - Los Angeles">
