--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -34,7 +34,7 @@ import { Icon } from "astro-icon";
         target="_blank"
         class="flex gap-1 items-center justify-center"
         rel="noopener">
-        <Icon class="text-white w-5 h-5" name="bx:bxs-cloud-download" />
+        <Icon class="text-white w-5 h-5" name="bx:bxs-phone" />
 
          Call Us
       </Link>
