--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -34,7 +34,7 @@ import { Icon } from "astro-icon";
         target="_blank"
         class="flex gap-1 items-center justify-center"
         rel="noopener">
-        <Icon class="text-white w-5 h-5" name="bx:bxs-phone" />
+        <Icon class="text-white w-6 h-6" name="bx:bxs-phone" />
 
          Call Us
       </Link>
@@ -45,8 +45,8 @@ import { Icon } from "astro-icon";
         href="https://github.com/surjithctly/astroship"
         class="flex gap-1 items-center justify-center"
         target="_blank">
-        <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
-         BOOK Us
+        <Icon class="text-black w-6 h-6" name="bx:bxs-calendar" />
+         BOOK US
       </Link>
     </div>
   </div>
