--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -4,8 +4,8 @@ import heroImage from "assets/hero.png";
 import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon";
 ---
-<h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-  Same Day Appliance Repair
+<h1><span class="animate-charcter">
+  Same Day</span> Appliance Repair
 </h1>
 <main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
   <div class="py-6 md:order-1 md:block">
