--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -118,7 +118,42 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
     .review-card{padding:20px;}
     .review-card__author{color:#5d5e5e}
  
-    
+    /*h1 animation*/
+   
+   h1{display: inline-block;
+      font-size: 60px;
+      line-height:66px;
+      font-weight:600;}
+    .animate-charcter
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 6s linear infinite;
+  display: inline-block;
+      font-size: 60px;
+      line-height:66px;
+      font-weight:900;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
     </style>
   </body>
 </html>
