--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,29 +16,27 @@ import Layout from "@layouts/Layout.astro";
       <main>
         <div class="category category-0" style="background-color:#ffffff;">
           <div class="container">
+            
+            
               <h2>Same Day Household Appliance Repair, Installation, and Maintenance</h2>
               <p>Our same day appliance repair experts will fix your appliance on the first visit in 90% of cases. Our trained technicians have parts on hand to ensure a quick repair.</p>
               <div class="category-items d-flex justify-content-between">
-                  
-                                          <span>
-                          <img width="120" height="150" src="/images/refrigerator-repair-los-angeles.webp" alt="Same day expert refrigerator repair - Los Angeles">
-                          <span>Refrigerator Repair</span>
-                       
-                                          <span><a title="Same day freezer repair Los Angeles" style="padding:0 20px 0 20px;" href="contact/book-online.html" target="_blank">
-                          <img width="120" height="150" src="images/freezer-stove-repair-los-angeles.webp" alt="Same day expert freezer repair - Los Angeles">
-                          
-                          
-                          <span>Freezer Repair</span>
-                          
-                      
-
-                      </a></span>
-                                          <a title="Same day washer repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+                    
+                <span style='padding:0 20px 0 20px;' title='Same day refrigerator repair Los Angeles'>
+<img width="120" height="150" src="../images/refrigerator-repair-los-angeles.webp" alt="Same day expert refrigerator repair - Los Angeles">
+<p style="width:120px">Refrigerator Repair</p>
+<a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
+                <span><a href='/contact/book-online' style='padding:0 20px 0 20px;' target='_blank' title='Same day freezer repair Los Angeles'>
+<img width="120" height="150" src="../images/freezer-stove-repair-los-angeles.webp" alt="Same day expert freezer repair - Los Angeles">
+<span>Freezer Repair</span>
+<span class="button">BOOK
+</span>
+</a></span>      <span style="padding:0 40px 0 20px;">
                           <img width="120" height="150" src="images/washer-repair-los-angeles.webp" alt="Same day expert washer repair - Los Angeles">
                           <span>Washer Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
+                          <a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+</span>
                                           <a title="Same day dryer repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
                           <img width="120" height="150" src="images/dryer-repair-los-angeles.webp" alt="Same day expert dryer repair - Los Angeles">
                           <span>Dryer Repair</span>
@@ -58,20 +56,20 @@ import Layout from "@layouts/Layout.astro";
                          </span>
                       </a>
                                           </div>
-    <div class="category-items d-flex justify-content-between">
-                 
-                 <a title="Same day over repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
-                     <img width="120" height="150" src="images/oven-repair-los-angeles.webp" alt="Same day expert oven repair - Los Angeles">
-                         <span>Oven Repair</span>
-                         <span class="button">BOOK
-                        </span>
-                 </a>
-                                        <a title="Same day cooktop repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
-                          <img width="120" height="150" src="images/cooktop-repair-los-angeles.webp" alt="Same day day expert cooktop repair - Los Angeles">
-                          <span>Cooktop Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
+                                          <div class="category-items d-flex justify-content-between">
+                    
+                                            <span><a href='/contact/book-online' style='padding:0 20px 0 20px;' target='_blank' title='Same day refrigerator repair Los Angeles'>
+                            <img width="120" height="150" src="../images/refrigerator-repair-los-angeles.webp" alt="Same day expert refrigerator repair - Los Angeles">
+                            <span>Refrigerator Repair</span>
+                           <span class="button">BOOK
+                           </span>
+                        </a></span>
+                                            <span><a href='/contact/book-online' style='padding:0 20px 0 20px;' target='_blank' title='Same day freezer repair Los Angeles'>
+                            <img width="120" height="150" src="../images/freezer-stove-repair-los-angeles.webp" alt="Same day expert freezer repair - Los Angeles">
+                            <span>Freezer Repair</span>
+                           <span class="button">BOOK
+                           </span>
+                        </a></span>
                                         <a title="Same day microvawe repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
                           <img width="120" height="150" src="images/microwave-repair-los-angeles.webp" alt="Same day microwave repair - Los Angeles">
                           <span>Microwave Repair</span>
