--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -9,7 +9,7 @@ import { Icon } from "astro-icon";
 </h1>
 <main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
   <div class="py-6 md:order-1 md:block">
-    <p>Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We deliver professional appliance repair services, that you can rely on with confidence.</p>
+    <p>Same Day Appliance Repair - your destination for all your commercial and household appliance repair needs! We deliver professional appliance repair services, that you can rely on with confidence.<br><br> We have helped thousands of customers, alleviating the stress that comes when appliances malfunction. Our quick response time and efficient work ethic form the cornerstone of our operational approach, aiming to resolve your appliance issues promptly and proficiently.</p>
    <br><div class="callback">
     <form class='contact-form' id='simple-contact-form' method='POST' name='simpleContactForm'><input type='hidden' name='form-name' value='simpleContactForm' />
 <!-- <form name="contact" method="POST" data-netlify="true" onSubmit="submit">-->
@@ -25,7 +25,7 @@ import { Icon } from "astro-icon";
   </div>
 
   <div class="text-lg mt-4 text-slate-600 max-w-xl">
-      <img width="350" height="350" style="border-radius: 25px;" src="/images/same-day-appliance-repair-experts.webp">
+      <img width="450" height="450" style="border-radius: 25px;" src="/images/same-day-appliance-repair-experts.webp">
      
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
@@ -36,7 +36,7 @@ import { Icon } from "astro-icon";
         rel="noopener">
         <Icon class="text-white w-6 h-6" name="bx:bxs-phone" />
 
-         Call Us
+         CALL US: (323)540-5890
       </Link>
       <Link
         size="lg"
