--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,15 +16,25 @@ import Layout from "@layouts/Layout.astro";
       <main>
         <div class="category category-0" style="background-color:#ffffff;">
           <div class="container">
-            
-            
+            <!--driving truck -->
+            <div class="loop-wrapper">
+                <div class="mountain"></div>
+                <div class="hill"></div>
+                <div class="tree"></div>
+                <div class="tree"></div>
+                <div class="tree"></div>
+                <div class="rock"></div>
+                <div class="truck"></div>
+                <div class="wheels"></div>
+              </div> 
+              <!--End drivng truck -->
               <h2>Same Day Household Appliance Repair, Installation, and Maintenance</h2>
               <p>Our same day appliance repair experts will fix your appliance on the first visit in 90% of cases. Our trained technicians have parts on hand to ensure a quick repair.</p>
               <div class="category-items d-flex justify-content-between">
                     
                 <span style='padding:0 20px 0 20px;' title='Same day refrigerator repair Los Angeles'>
 <img width="120" height="150" src="../images/refrigerator-repair-los-angeles.webp" alt="Same day expert refrigerator repair - Los Angeles">
-<p style="width:120px">Refrigerator Repair</p>
+<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Refrigerator Repair</p>
 <a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
                 <span><a href='/contact/book-online' style='padding:0 20px 0 20px;' target='_blank' title='Same day freezer repair Los Angeles'>
