--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -155,15 +155,15 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
   }
 }
 /*Truck Driving Animation */
-.loop-wrapper {
+.loop-wrapper { width:100%;
+  background-color: #1a1b1b;
   margin: 0 auto;
   position: relative;
   display: block;
-  width: 600px;
-  height: 250px;
+  height: 150px;
   overflow: hidden;
   border-bottom: 3px solid #fff;
-  color: #fff;
+  color: #322f2f;
 }
 .mountain {
   position: absolute;
