--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -294,6 +294,8 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
   100% {
     transform: translateX(-2000px);
   }}
+  .items-start{border:1px solid; border-radius: 15px; padding:10px; }
+  .gap-4{margin:0!Important;}
     </style>
   </body>
 </html>
