--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,12 +37,12 @@ import Layout from "@layouts/Layout.astro";
 <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Refrigerator Repair</p>
 <a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
-                <span><a href='/contact/book-online' style='padding:0 20px 0 20px;' target='_blank' title='Same day freezer repair Los Angeles'>
+                <span style='padding:0 20px 0 20px;'>
 <img width="120" height="150" src="../images/freezer-stove-repair-los-angeles.webp" alt="Same day expert freezer repair - Los Angeles">
-<span>Freezer Repair</span>
-<span class="button">BOOK
+<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Freezer Repair</p>
+<a style="width:120px" title='Same day freezer repair Los Angeles' href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
-</a></span>      <span style="padding:0 40px 0 20px;">
+ <span style="padding:0 40px 0 20px;">
                           <img width="120" height="150" src="images/washer-repair-los-angeles.webp" alt="Same day expert washer repair - Los Angeles">
                           <span>Washer Repair</span>
                           <a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
