--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,43 +37,41 @@ import Layout from "@layouts/Layout.astro";
 <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Refrigerator Repair</p>
 <a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
-                <span style='padding:0 20px 0 20px;'>
+ <span style='padding:0 20px 0 20px;'>
 <img width="120" height="150" src="../images/freezer-stove-repair-los-angeles.webp" alt="Same day expert freezer repair - Los Angeles">
 <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Freezer Repair</p>
 <a style="width:120px" title='Same day freezer repair Los Angeles' href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
  <span style="padding:0 40px 0 20px;">
-                          <img width="120" height="150" src="images/washer-repair-los-angeles.webp" alt="Same day expert washer repair - Los Angeles">
-                          <span>Washer Repair</span>
-                          <a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+<img width="120" height="150" src="images/washer-repair-los-angeles.webp" alt="Same day expert washer repair - Los Angeles">
+<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Washer Repair</p>
+<a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
-                                          <a title="Same day dryer repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+
+ <span style="padding:0 40px 0 20px;">
                           <img width="120" height="150" src="images/dryer-repair-los-angeles.webp" alt="Same day expert dryer repair - Los Angeles">
-                          <span>Dryer Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
-                                          <a title="Same day range stove repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Dryer Repair</p>
+                          <a style="width:120px" title="Same day dryer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
+
+ <span style="padding:0 40px 0 20px;">
                           <img width="120" height="150" src="images/range-stove-repair-los-angeles.webp" alt="Same day expert range/stover repair - Los Angeles">
-                          <span>Range/Stove Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
-                                          <a title="Same day dishwasher repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Range/Stove Repair</p>
+                          <a style="width:120px" title="Same day range stove repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
+
+                      <span style="padding:0 40px 0 20px;">
                           <img width="120" height="150" src="images/dishwasher-repair-los-angeles.webp" alt="Same day dishwasher repair - Los Angeles">
-                          <span>Dishwasher Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
-                                          </div>
-                                          <div class="category-items d-flex justify-content-between">
-                    
-                                            <span><a href='/contact/book-online' style='padding:0 20px 0 20px;' target='_blank' title='Same day refrigerator repair Los Angeles'>
+                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Dishwasher Repair</p>
+                          <a style="width:120px" title="Same day dishwasher repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span> </div>
+                        
+                        <div class="category-items d-flex justify-content-between">
+     <span style='padding:0 20px 0 20px;'' title='Same day refrigerator repair Los Angeles'>
                             <img width="120" height="150" src="../images/refrigerator-repair-los-angeles.webp" alt="Same day expert refrigerator repair - Los Angeles">
-                            <span>Refrigerator Repair</span>
-                           <span class="button">BOOK
-                           </span>
-                        </a></span>
+                            <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Refrigerator Repair</p>
+                            <a style="width:120px" title="Same day refrigerator repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span> 
                                             <span><a href='/contact/book-online' style='padding:0 20px 0 20px;' target='_blank' title='Same day freezer repair Los Angeles'>
                             <img width="120" height="150" src="../images/freezer-stove-repair-los-angeles.webp" alt="Same day expert freezer repair - Los Angeles">
                             <span>Freezer Repair</span>
