--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,36 +72,33 @@ import Layout from "@layouts/Layout.astro";
                             <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Refrigerator Repair</p>
                             <a style="width:120px" title="Same day refrigerator repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span> 
-                                            <span><a href='/contact/book-online' style='padding:0 20px 0 20px;' target='_blank' title='Same day freezer repair Los Angeles'>
+                                            <span style='padding:0 20px 0 20px;'>
                             <img width="120" height="150" src="../images/freezer-stove-repair-los-angeles.webp" alt="Same day expert freezer repair - Los Angeles">
-                            <span>Freezer Repair</span>
-                           <span class="button">BOOK
-                           </span>
-                        </a></span>
-                                        <a title="Same day microvawe repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+                            <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Freezer Repair</p>
+                            <a style="width:120px" title="Same day freezer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
+                                        <span style="padding:0 40px 0 20px;">
                           <img width="120" height="150" src="images/microwave-repair-los-angeles.webp" alt="Same day microwave repair - Los Angeles">
-                          <span>Microwave Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
-                                          <a title="Same day range hood repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Microwave Repair</p>
+                          <a style="width:120px" title="Same day microvawe repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
+                                          <span style="padding:0 40px 0 20px;">
                           <img width="120" height="150" src="images/range-hood-repair-los-angeles.webp" alt="Same day range hood repair - Los Angeles">
-                          <span>Range Hood Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
-                                          <a title="expert fireplace repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Range Hood Repair</p>
+                          <a style="width:120px" title="Same day range hood repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
+            
+                        <span style="padding:0 40px 0 20px;">
                           <img width="120" height="150" src="images/fireplace-repair-los-angeles.webp" alt="Same day fireplace repair - Los Angeles">
-                          <span>Fireplace Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
-                                          <a title="Same day bbq grill repair Los Angeles" style="padding:0 40px 0 20px;" href="contact/book-online.html" target="_blank">
+                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Fireplace Repair</p>
+                          <a style="width:120px" title="Expert fireplace repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
+
+                                          <span style="padding:0 40px 0 20px;">
                           <img width="120" height="150" src="images/bbq-grill-repair-los-angeles.webp" alt="Same day bbq grill repair - Los Angeles">
-                          <span>BBQ Grill Repair</span>
-                          <span class="button">BOOK
-                         </span>
-                      </a>
+                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">BBQ Grill Repair</p>
+                          <a style="width:120px" title="Same day bbq grill repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                        </span>
                                   </div>
           </div>
                   </div>
